<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iconIV"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_shopping"
        android:transitionName="@string/transition_name"
        android:contentDescription="@string/app_name" />

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_toStartOf="@id/iconIV"
        android:fontFamily="@font/steradian_black"
        android:text="@string/app_name"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/shoppingRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/iconIV"
        android:background="@drawable/background_white_top_rounded"
        android:padding="@dimen/big_padding"
        tools:listitem="@layout/item_shopping" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_shopping_item"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/colorPrimaryDark" />

</RelativeLayout>